--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/supabase": "^2.0.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@supabase/supabase-js": "^2.76.1",
     "nuxt": "^4.1.3",
